# python-search

./: .gitignore  README.md
Java/: Dockerfile  Dockerfile-old  docker-build.sh  docker-run-entrypoints.sh  docker-run.sh  service_start.sh
Java/demo/: pom.xml
Java/demo/src/main/java/com/example/: App.java
Java/demo/src/main/java/search/indexing/: Indexing.java
Python/: Dockerfile  Dockerfile-old  Dockerfile-old2  Search-indexing-script.py  docker-build.sh  docker-run-entrypoints.sh  docker-run.sh  pyproject.toml  requirements.txt  service_start.sh
Python/config/: log_config.py
Python/logs/: connexion_example.log.1  connexion_example.log.10  connexion_example.log.2  connexion_example.log.3  connexion_example.log.4  connexion_example.log.5  connexion_example.log.6  connexion_example.log.7  connexion_example.log.8  connexion_example.log.9
