[tool.poetry]
name = "python-serarch"
version = "0.1.0"
description = "Python-Search Project for indexing"
authors = ["euiyounghwang <marieuig@gmail.com>"]
readme = "README.md"
packages = [{include = "3"}]

[tool.poetry.dependencies]
python = "^3.6"
elasticsearch = "7.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
