[tool.poetry]
name = "python-serarch"
version = "0.1.0"
description = "Python-Search Project for indexing"
authors = ["euiyounghwang <marieuig@gmail.com>"]
readme = "README.md"
#packages = [{include = "python-search"}]

[tool.poetry.dependencies]
python = "^3.9"
elasticsearch = "7.13.0"
pandas = "^2.0.3"
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
